--- a/css/style-responsive.css
+++ b/css/style-responsive.css
@@ -1,3 +1,8 @@
+@media (max-width: 1920px){
+  .main .card-main {
+    width: 240px;
+  }
+}
 @media (max-width: 1366px) {
   html {
     font-size: 70%;
